# argus

./: .gitignore  CLAUDE.md  README.md
ColorCamera/: rgb_preview.py
assets/: IMG_0462.mov:Zone.Identifier  IMG_0464.JPG:Zone.Identifier
config/: my_rgbd.yaml
create3_ws/: .gitignore  oak_rgb.yaml  oak_rgb_only.yaml
create3_ws/src/drive/: package.xml
create3_ws/src/drive/config/: twist.yaml
create3_ws/src/drive/drive/: joy_dock.py
create3_ws/src/drive/launch/: controller.launch.py
dashboard/: README.md  check_battery_publishers.py  check_python.sh  configure_ip.sh  debug_battery.py  debug_install.sh  fix_python_deps.sh  fix_service.sh  install.sh  install_missing_deps.sh  install_simple.sh  quick_fix.sh  run.sh  test_battery.py  test_bridge_thread.py  test_cli_parsing.py  test_dashboard.sh  test_simple.sh
dashboard/backend/: camera_service.py  cli_bridge.py  main.py  main_simple.py  minimal_publisher.py  requirements.txt  ros_bridge.py  ros_control.py  ros_control_simple.py  simple_publisher.py  subprocess_bridge.py  test_ros.py  test_subprocess.py
dashboard/frontend/: index.html  manifest.json
dashboard/frontend/css/: main.css
dashboard/frontend/js/: camera.js  controls.js  keyboard.js  touch.js  websocket.js
scripts/: capture_image.py  init.sh  map2img.py  teleop.py
