<?xml version="1.0"?>
<package format="3">
  <name>drive</name>
  <version>0.1.0</version>
  <description>Xbox controller driving plus Create3 dock/undock button actions.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>irobot_create_msgs</depend>

  <!-- runtime deps used by the launch -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

